@@ -3,7 +3,7 @@
  *
  * by Gary Wong, 1996-2000
  *
- * $Id: buffer.c,v 1.3 2000/01/19 17:01:59 gtw Exp $
+ * $Id: buffer.c,v 1.4 2000/01/31 17:52:54 gtw Exp $
  */
 
 #include "config.h"
@@ -21,6 +21,8 @@
 #if HAVE_UNISTD_H
 #include <unistd.h>
 #endif
+
+#if HAVE_BUFFER
 
 int BufferReadNotify( event *pev, buffer *pb ) {
 
@@ -249,3 +251,5 @@ int BufferWritef( buffer *pb, char *szFormat, ... ) {
 
     return cch;
 }
+
+#endif
