@@ -10,6 +10,9 @@
 #include <event.h>
 #include <fifo.h>
 
+#if HAVE_EVENT
+#define HAVE_BUFFER 1
+
 typedef struct _buffer {
     fifo fRead, fWrite;
     event evRead, evWrite;
@@ -33,5 +36,6 @@ extern int BufferConsume( buffer *pb, int cch );
 
 extern int BufferWrite( buffer *pb, char *sz );
 extern int BufferWritef( buffer *pb, char *szFormat, ... );
+#endif
 
 #endif
